# risus-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  PLAYER.md  PRD-multiplayer.md  README.md  docker-compose.yml  pyproject.toml  risus.cfg.example  risus.py
.autopilot/: chunk-1-implement.json  chunk-1-review-fix.json  chunk-2-implement.json  chunk-2-review-fix.json  chunk-plan.json  phase1-2.json  phase3-4.json  phase5.json
.beads/: issues.jsonl  metadata.json
.github/workflows/: build.yml  release.yml
.omc/: project-memory.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
client/: config.py  state.py  ws_client.py
docker/: server.Dockerfile
risus/: __main__.py  display.py  models.py  persistence.py  repl.py
server/: app.py  commands.py  db.py  locks.py  models.py  rest.py  schema.sql  ws.py
specs/001-risus-cli-poc/: chunks.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-standalone-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-secure-session/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-macos-signed-release/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-zip-directory-structure/: plan.md  spec.md  tasks.md
specs/007-client-screen-sync/: plan.md  (+5 more)
tests/: test_display.py  test_models.py  test_persistence.py  test_repl.py
(+32 files in other folders)
