[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "risus-cli"
version = "0.1.0"
description = "Text-adventure style interactive REPL for tracking Risus RPG battle state"
requires-python = ">=3.11"

[project.scripts]
cli = "risus.__main__:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["risus*"]
